[package]
name = "repub"
version = "0.1.0"
edition = "2021"
description = "Rust library and binary for converting mhtml webpages into summarized epubs"
repository = "https://github.com/erikbrinkman/repub-rs"
license = "MIT"
keywords = ["mhtml", "epub", "remarkable"]

[dependencies]
clap = { version = "4.0", features = ["wrap_help", "derive"], optional = true }
epub-builder = { git = "https://github.com/lise-henry/epub-builder/", version = "0.6.0", rev = "ca43e0a", default-features = false, features = ["zip-library"] }
eyre = "0.6.8"
image = { version = "0.24", optional = true }
kuchiki = "0.8"
log = "0.4"
mail-parser = "0.8"
markup5ever = "0.10"
percent-encoding = "2.2"
readable-readability = "0.4"
stderrlog = { version = "0.5", optional = true }
strsim = "0.10"

[dev-dependencies]
base64 = "0.21"
epub = "2.0"
quoted_printable = "0.5"

[features]
binary = ["clap", "stderrlog", "image"]

[lib]
name = "repub"

[[bin]]
name = "repub"
required-features = ["binary"]
