[package]
name = "repub-rs"
version = "0.2.1"
edition = "2021"
description = "Rust library and binary for converting mhtml webpages into remarkable-style summarized epubs"
repository = "https://github.com/erikbrinkman/repub-rs"
license = "MIT"
keywords = ["mhtml", "epub", "remarkable"]

[dependencies]
clap = { version = "4.0", features = ["wrap_help", "derive"], optional = true }
epub-builder = { version = "0.7", default-features = false, features = ["zip-library"] }
eyre = "0.6.8"
image = { version = "0.25", optional = true }
kuchiki = "0.8"
log = "0.4"
mail-parser = "0.9"
markup5ever = "0.10"
percent-encoding = "2.2"
readable-readability = "0.4"
stderrlog = { version = "0.6", optional = true }
strsim = "0.11"

[dev-dependencies]
base64 = "0.22"
epub = "2.0"
quoted_printable = "0.5"

[features]
binary = ["clap", "stderrlog", "image"]

[lib]
name = "repub"

[[bin]]
name = "repub-rs"
required-features = ["binary"]
